changes: *  add custom domain support * fix bug with published switch * fix bug with stale cache for monitors in status page * fix bug opening status page on clicking "View page" * refactor routes

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -115,7 +115,8 @@
         "custom_css": "Custom CSS",
         "custom_js": "Custom JavaScript",
         "announcement": "Announcement",
-        "description": "Description"
+        "description": "Description",
+        "domain": "Domain"
     },
     "heartbeats": {
         "title": "Heartbeats",
