--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -113,7 +113,8 @@
         "custom_css": "CSS personnalisé",
         "custom_js": "JavaScript personnalisé",
         "announcement": "Annonce",
-        "description": "Description"
+        "description": "Description",
+        "domain": "Domaine"
     },
     "heartbeats": {
         "title": "Signaux de vie",
